# dynamic-database-builder

./: .gitignore  BUILD_PLAN.md  CONTINUATION_PROMPT.md  GENERALIZED_SUMMARY.md  KNOWLEDGE_SITE_TEMPLATE.html  KNOWLEDGE_SITE_TEMPLATE.md  README.md  TECHNICAL_SPEC.md  pyproject.toml  requirements.txt  run.py  site.schema.json
archive/design-studio/: README.md
archive/design-studio/js/: connection-panel.js  entity-panel.js  field-suggest.js  setup-wizard.js  workspace-map.js
data/: backup-config.example.json
examples/: mind-map.schema.json  tagged_knowledge_base.json
kit/api/: app.py  routes.py
kit/auth/: __init__.py  neon.py
kit/backup/: __init__.py  github.py
kit/engine/: crud.py  db.py  ddl.py  dialect.py  junction.py  migrations.py  projection.py  runtime.py  seed.py  serialize.py  sql.py
kit/engine/export/: json_export.py  xlsx_export.py
kit/schema/: __init__.py  loader.py  model.py  workspaces.py
kit/schema/defaults/: tagged_knowledge_base.json
plans/: design_brainstorm_ui_inferred_links.plan.md
scripts/: backup_to_github.py  backup_workspaces.sh
static/: editor.html  styles.css
static/js/: app-workspaces.js  auth-client.js  autosave-row.js  editor.js  entity-api.js  schema-client.js  view-columns.js  workspace-picker.js
static/js/design/: brainstorm-flow.js  brainstorm.js  connection-panel.js  design-actions.js  design-tab.js  entity-panel.js  field-presets.js  field-suggest.js  help-text.js  inspector.js  item-editor.js  map-layout.js  modals.js  recipes.js  setup-wizard.js  studio-workspace-panel.js  view-tab-editor.js  (+2 more)
(+6 files in other folders)
